--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+		@foreach (Category category in ViewBag.Categories)
+		{
+			<p>@category.CategoryId</p>
+			<p>@category.name</p>
+		})
+    </p>
 </div>
